hard-gists/1701305/run.log
=== Docker Run Log for 1701305 ===
Started at: Mi 29. Okt 12:23:45 CET 2025

[2025-10-29 12:23:45] START: Running container for 1701305
[2025-10-29 12:23:46] SUCCESS: Container cedd7dda6feb790abf2ee78b0ef1724223da60922394bba3656bcc4e247c8d23 started for 1701305
=== Container logs for 1701305 ===
  File "/snippet.py", line 24
    print "Cannot tag MP3 file"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1701305 ===
[2025-10-29 12:23:48] INFO: Container cedd7dda6feb790abf2ee78b0ef1724223da60922394bba3656bcc4e247c8d23 has stopped
